--- a/index.html
+++ b/index.html
@@ -2,61 +2,8 @@
 <html>
   <head>
     <title>Everyday with Isa</title>
- <style>  
-/* Use a custom font for the whole document */
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400');
-
-* {
-font-family: 'Lato', sans-serif;
-}
-
-/* Add some margin and padding to the body */
-body {
-background-color: cadetblue;
-margin: 20px;
-padding: 20px;
-}
-
-/* Center the title and subtitle */
-h1, h3 {
-text-align: center;
-}
-
-/* Make the images responsive */
-img {
-max-width: 100%;
-height: auto;
-}
-
-/* Add some space between the images and the text */
-p {
-margin-top: 20px;
-}
-
-/* Style the links with a different color and underline */
-a {
-color: #FF1493;
-text-decoration: underline;
-}
-
-/* Style the headings with a different color and font-weight */
-h1, h2, h3, h4 {
-color: #800080;
-font-weight: 400;
-}
-
-/* Style the list items with bullets and some margin */
-ul {
-list-style-type: disc;
-margin-left: 40px;
-}
-
-/* Style the contact information with a different font-size and color */
-#contact p {
-font-size: 14px;
-color: #808080;
-}
-</style>
+    <!--<link rel="stylesheet" type="text/css" href="reset.css" />-->
+  <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
    <a href="#contact"> <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg"/></a>
